src/test/deca/syntax/valid/SansObjet/Program-DeclVarInst.deca
// Description:
//    Variable declarations and then instructions
//
// Results:
//    nothing
//
// Historique:
//    cree le 11/01/2022

{
        int x;
        boolean u;
        x = 1;
        u = true;
}
